# 1pn_no_g

./: .gitignore  1pn_no_g.tex  AUDIT_FAILURE_ANALYSIS.md  COMPRESSIBLE_IMPLEMENTATION.md  CONVERGENCE_STUDY_RESULTS.md  DATACLASS_IMPLEMENTATION.md  DELIVERABLES_ROBUSTNESS.md  EXTRA.md  EXTRA_NOTES.md  FIELD_IMPLEMENTATION.md  INVESTIGATION_62_PERCENT_DEFICIT.md  MASS_DRIFT_IMPLEMENTATION.md  NEWTONIAN_BASELINE.md  PRECISION_INVESTIGATION.md  PRECISION_README.txt  PRECISION_RESOURCES.md  PRECISION_SUMMARY.md  PROJECT.md  README.md  ROBUSTNESS_TESTS_QUICKSTART.md  ROBUSTNESS_VALIDATION.md  STATUS_1PN_PROGRESS.md  VISUALIZATION_PLAN.md  VISUALIZATION_README.md  debug_audit.py  debug_force.py  debug_quadrature.py  diagnose_quadrature_sign.py  dtype_implementation_example.py  plan_no_pde.md  precision_analysis.py  precision_examples.py  pyproject.toml  setup.py  test_all_terms.py  test_audit_fix.py  test_compressible_forces.py  test_correct_cross_term.py  test_cross_term.py  test_dataclasses.py  (+7 more)
examples/: audit_test_minimal.yaml  equal_mass_binary.yaml  incompressible_baseline.yaml  mercury_eccentric.yaml  mercury_orbit.yaml  mercury_quick_test.yaml  quick_validation.yaml  sun_earth.yaml
scripts/: README_VALIDATION.md  analyze_force_decomposition.py  check_precession_measurement.py  compare_with_gr.py  demo_validation.sh  demonstrate_boost_error.py  diagnose_compressible_force.py  estimate_1pn_force.py  final_diagnosis.py  plot_newtonian_convergence.py  precession_helpers.py  quick_precession_probe.py  robustness_tests.py  trace_velocity_boost.py  validate_1pn_precession.py  validate_force_law.py  validate_newtonian.py
slab/: bodies.py  diagnostics.py  dynamics.py  field.py  geometry.py  gr1pn.py  io_cfg.py  medium.py  run.py  surface.py  viz.py
tests/: test_field.py  test_field_simple.py
