[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superfluid-orbit-simulator"
version = "0.1.0"
description = "Orbital dynamics simulator using superfluid hydrodynamics (emergent gravity without G)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "VT-7 Collaboration"},
]
keywords = [
    "superfluid",
    "hydrodynamics",
    "orbital mechanics",
    "post-Newtonian",
    "emergent gravity",
    "computational physics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.21.0",
    "pyyaml>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]
viz = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]
all = [
    "superfluid-orbit-simulator[dev,viz]",
]

[project.scripts]
slab-run = "slab.run:main"

[project.urls]
Homepage = "https://github.com/vt7-collaboration/superfluid-orbit-simulator"
Documentation = "https://github.com/vt7-collaboration/superfluid-orbit-simulator/blob/main/README.md"
Repository = "https://github.com/vt7-collaboration/superfluid-orbit-simulator"
Issues = "https://github.com/vt7-collaboration/superfluid-orbit-simulator/issues"

[tool.setuptools]
packages = ["slab"]

[tool.setuptools.package-data]
slab = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true
